fixed : responsiveness on smaller screens

--- a/images.css
+++ b/images.css
@@ -4,47 +4,11 @@
     box-sizing: border-box;
 }
 
-.main-box {
-    display: flex;
-}
-
-.boxed {
-    /* width: 100px;
-    height: 67px; */
-    background: #E5E5E5;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-    padding: 0.5rem;
-}
-
-.numed {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    margin: 0;
-    font-size: medium;
-}
-
-.texted {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    margin: 0;
-    font-size: medium;
-}
-
 .images {
     padding: 1rem;
     max-width: 960px;
     margin:1rem auto;
     
-    /* border: black;
-    border-style: solid; */
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -53,10 +17,6 @@
 }
 
 .img {
-
-    
-    /* width: 50%;
-    height: auto; */
     width: 100%;
     height: 100%;
     border-radius: 1rem;
@@ -65,14 +25,11 @@
 .images .img1 {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-
-    
 }
 
 .images .img2 {
-    grid-column: 2 / span 2;
-    grid-row: 1 / 2;
-    
+    grid-column: 2 / 4;
+    grid-row: 1 / 2; 
 }
 
 .images .img3 {
